--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
   margin: 0;
   border: 0;
   box-sizing: border-box;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
 }
 .main {
   margin: 0 auto;
   width: 80%;
 }
-.header,
-.logo_header,
+.head,
+.logo_head,
 .menu {
   display: flex;
   align-items: center;
@@ -28,9 +28,9 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-.bg{
-    background: rgba(255, 255, 255, 0.36);
-    width: 558px;
-height: 119px;
-flex-shrink: 0;
+.bg {
+  background: rgba(255, 255, 255, 0.36);
+  width: 558px;
+  height: 119px;
+  flex-shrink: 0;
 }
