--- a/style3.css
+++ b/style3.css
@@ -18,7 +18,7 @@ a {
   margin: 0 auto;
   width: 80%;
 }
-.header,
+.head,
 .menu {
   display: flex;
   align-items: center;
@@ -26,12 +26,50 @@ a {
   background: #047e79;
   width: 1443px;
   height: 93px;
-  flex-shrink: 0;
 }
-.header_bg{
+.head_bg {
   position: absolute;
   background: #047e79;
+  width: 100%;
+  height: 93px;
+  z-index: -1;
 }
 .menu > div {
   margin-left: 50px;
 }
+.header{
+  color: #000;
+text-align: center;
+font-family: PT Sans;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.header_ps{
+  color: #A5A5A5;
+text-align: center;
+font-family: PT Sans;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+.picture{
+  background-image: url(./img/luca-bravo-O453M2Liufs-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 1010px;
+  height: 472px;
+  flex-shrink: 0;
+
+}
+.text{
+  color: #000;
+font-family: PT Sans;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
