--- a/style3.css
+++ b/style3.css
@@ -37,39 +37,42 @@ a {
 .menu > div {
   margin-left: 50px;
 }
-.header{
+.header {
   color: #000;
-text-align: center;
-font-family: PT Sans;
-font-size: 48px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+  text-align: center;
+
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
-.header_ps{
-  color: #A5A5A5;
-text-align: center;
-font-family: PT Sans;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+.header_ps {
+  color: #a5a5a5;
+  text-align: center;
+
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
-.picture{
+.picture {
   background-image: url(./img/luca-bravo-O453M2Liufs-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  width: 1010px;
-  height: 472px;
-  flex-shrink: 0;
-
+  width: 100%;
+  height: 538px;
+  background-position: center;
 }
-.text{
+.text {
   color: #000;
-font-family: PT Sans;
-font-size: 20px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
-
+.icon, .icons{
+  display: flex;
+  width: 35px;
+  height: 35px;
+  margin-right: 63px;
+}
