--- a/style5.css
+++ b/style5.css
@@ -11,12 +11,28 @@
   margin: 0 auto;
   width: 80%;
 }
+a {
+  text-decoration: none;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+}
 .head,
 .menu {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  background: #047E79;
+  background: #047e79;
+  width: 1443px;
+  height: 93px;
+}
+.head_bg {
+  position: absolute;
+  background: #047e79;
+  width: 100%;
+  height: 93px;
+  z-index: -1;
 }
 .menu > div {
   margin-left: 50px;
