--- a/style3.css
+++ b/style3.css
@@ -24,7 +24,7 @@ a {
   align-items: center;
   justify-content: flex-end;
   background: #047e79;
-  width: 1443px;
+  width: 100%;
   height: 93px;
 }
 .head_bg {
