--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   font-family: "PT Sans", sans-serif;
 }
-.main {
+/* .main {
   margin: 0 auto;
   width: 80%;
 }
@@ -47,4 +47,139 @@ a {
   width: 558px;
   height: 119px;
   flex-shrink: 0;
+} */
+a {
+  text-decoration: none;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+}
+.main {
+  margin: 0 auto;
+  width: 80%;
+}
+.head,
+.menu {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  background: #047e79;
+  width: 100%;
+  height: 93px;
+}
+.head_bg {
+  position: absolute;
+  background: #047e79;
+  width: 100%;
+  height: 93px;
+  z-index: -1;
+}
+.menu > div {
+  margin-left: 50px;
+}
+.header {
+  color: #000;
+  text-align: center;
+
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.header_ps {
+  color: #a5a5a5;
+  text-align: center;
+
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.picture {
+  background-image: url(./img/young-rural-travellers-on-a-picnic.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 538px;
+  background-position: center;
+}
+.text {
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.block_pic {
+  background-image: url(./img/female-tourists-on-hand-have-a-happy-travel-map.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 362px;
+  height: 409px;
+  background-position: center;
+}
+.block_name {
+  width: 166px;
+  height: 47px;
+  flex-shrink: 0;
+}
+.block_text {
+  width: 362px;
+  height: 152px;
+  flex-shrink: 0;
+}
+.section_items_row{
+  display: flex;
+}
+.icon,
+.icons {
+  display: flex;
+  padding: 0px 48px;
+  margin-top: 90px;
+}
+.color {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.g {
+  height: 450px;
+  background: #d9d9d9;
+}
+.b {
+  height: 250px;
+  background: #047e79;
+}
+.footer_block {
+  border: 8px solid #047e79;
+  background: #d9d9d9;
+  width: 618px;
+  /* height: 218px; */
+  padding: 60px;
+}
+.footer_block>div {
+margin: 20px 0;
+}
+.text_footer {
+  color: #047e79;
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.text_footer_ps {
+  color: #000;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.footer_label{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
