--- a/style4.css
+++ b/style4.css
@@ -24,7 +24,7 @@ a {
   align-items: center;
   justify-content: flex-end;
   background: #047e79;
-  width: 1443px;
+  width: 100%;
   height: 93px;
 }
 .head_bg {
@@ -36,4 +36,55 @@ a {
 }
 .menu > div {
   margin-left: 50px;
+}
+.icon,
+.icons {
+  display: flex;
+  padding: 0px 48px;
+  margin-top: 90px;
+}
+.color {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.g {
+  height: 450px;
+  background: #d9d9d9;
+}
+.b {
+  height: 250px;
+  background: #047e79;
+}
+.footer_block {
+  border: 8px solid #047e79;
+  background: #d9d9d9;
+  width: 618px;
+  /* height: 218px; */
+  padding: 60px;
+}
+.footer_block>div {
+margin: 20px 0;
+}
+.text_footer {
+  color: #047e79;
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.text_footer_ps {
+  color: #000;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.footer_label{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
