--- a/style5.css
+++ b/style5.css
@@ -5,7 +5,7 @@
   margin: 0;
   border: 0;
   box-sizing: border-box;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
 }
 .main {
   margin: 0 auto;
@@ -24,7 +24,7 @@ a {
   align-items: center;
   justify-content: flex-end;
   background: #047e79;
-  width: 1443px;
+  width: 100%;
   height: 93px;
 }
 .head_bg {
@@ -36,4 +36,44 @@ a {
 }
 .menu > div {
   margin-left: 50px;
+}
+.avatar {
+  width: 273px;
+  height: 273px;
+  border-radius: 273px;
+  background-color: rgba(238, 122, 8, 0.53);
+
+}
+.name {
+  color: #000;
+  text-align: center;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.name_user {
+  color: #7a7a7a;
+  text-align: center;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.info_user {
+  width: 882px;
+  height: 467px;
+  flex-shrink: 0;
+  background: #d9d9d9;
+  color: #000;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.line{
+  width: 100%;
+  height: 1px;
+  border-bottom: #000 1px solid;
 }
