--- a/style/style3.css
+++ b/style/style3.css
@@ -56,7 +56,7 @@ a {
   line-height: normal;
 }
 .picture {
-  background-image: url(./img/luca-bravo-O453M2Liufs-unsplash.jpg);
+  background-image: url(../img/luca-bravo-O453M2Liufs-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
