--- a/style/style3.css
+++ b/style/style3.css
@@ -40,8 +40,7 @@ a {
 .header {
   color: #000;
   text-align: center;
-
-  font-size: 48px;
+  font-size: 35px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -56,7 +55,6 @@ a {
   line-height: normal;
 }
 .picture {
-  background-image: url(../img/luca-bravo-O453M2Liufs-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -74,7 +72,6 @@ a {
 .icons {
   display: flex;
   padding: 0px 48px;
-  margin-top: 90px;
 }
 .color {
   width: 100%;
@@ -83,27 +80,26 @@ a {
   justify-content: center;
 }
 .g {
-  height: 450px;
+  height: 270px;
   background: #d9d9d9;
 }
 .b {
-  height: 250px;
+  height: 57px;
   background: #047e79;
+}
+.footer{
+  margin-top: 4%;
 }
 .footer_block {
   border: 8px solid #047e79;
   background: #d9d9d9;
   width: 618px;
-  /* height: 218px; */
   padding: 60px;
-}
-.footer_block>div {
-margin: 20px 0;
 }
 .text_footer {
   color: #047e79;
   text-align: center;
-  font-size: 36px;
+  font-size: 30px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -111,13 +107,48 @@ margin: 20px 0;
 .text_footer_ps {
   color: #000;
   text-align: center;
-  font-size: 24px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
-.footer_label{
+.footer_label {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+/* .btn > a{
+  color: #000;
+} */
+.section, .section > div {
+  margin: 30px 0;
+}
+.btn {
+  display: inline-block;
+  line-height: 20px;
+  align-self: center;
+  transition: background 0.9s;
+  padding: 0px 15px;
+  border-radius: 5px;
+  font-weight: 300;
+  background-color: #80808033;
+  margin: 10px;
+}
+.btn:hover {
+  background-color: #047e7ab9;
+  border: 2px solid #ffffff00;
+  border-radius: 18px;
+}
+.btn a {
+  color: #000000;
+  font-size: 19px;
+}
+.India {
+  background-image: url(../img/luca-bravo-O453M2Liufs-unsplash.jpg);
+}
+.Japan {
+  background-image: url(../img/beautiful-shot-of-an-orange-tent-on-rocky-mountain-surrounded-by-trees-during-sunset.jpg);
+}
+.Australia {
+  background-image: url(../img/beautiful-shot-of-a-crystal-clear-lake-next-to-a-snowy-mountain-base-during-a-sunny-day.jpg);
 }
