--- a/style/stylePhP5.css
+++ b/style/stylePhP5.css
@@ -42,7 +42,7 @@ a {
   height: 273px;
   border-radius: 273px;
   background-color: rgba(238, 122, 8, 0.53);
-margin: 0 auto;
+  margin: 0 auto;
 }
 .name {
   color: #000;
@@ -72,8 +72,11 @@ margin: 0 auto;
   font-weight: 400;
   line-height: normal;
 }
-.line{
+.line {
   width: 100%;
   height: 1px;
   border-bottom: #000 1px solid;
+}
+.block_pic:hover {
+  background-color: #ffffff42;
 }
