--- a/style/style4.css
+++ b/style/style4.css
@@ -41,7 +41,6 @@ a {
 .icons {
   display: flex;
   padding: 0px 48px;
-  margin-top: 90px;
 }
 .color {
   width: 100%;
@@ -50,27 +49,26 @@ a {
   justify-content: center;
 }
 .g {
-  height: 450px;
+  height: 270px;
   background: #d9d9d9;
 }
 .b {
-  height: 250px;
+  height: 57px;
   background: #047e79;
+}
+.footer {
+  margin-top: 4%;
 }
 .footer_block {
   border: 8px solid #047e79;
   background: #d9d9d9;
   width: 618px;
-  /* height: 218px; */
   padding: 60px;
-}
-.footer_block>div {
-margin: 20px 0;
 }
 .text_footer {
   color: #047e79;
   text-align: center;
-  font-size: 36px;
+  font-size: 30px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -78,12 +76,12 @@ margin: 20px 0;
 .text_footer_ps {
   color: #000;
   text-align: center;
-  font-size: 24px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
-.footer_label{
+.footer_label {
   display: flex;
   align-items: center;
   justify-content: center;
