--- a/style/style.css
+++ b/style/style.css
@@ -7,47 +7,6 @@
   box-sizing: border-box;
   font-family: "PT Sans", sans-serif;
 }
-/* .main {
-  margin: 0 auto;
-  width: 80%;
-}
-a {
-  text-decoration: none;
-  color: #fff;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 400;
-}
-.head,
-.logo_head,
-.menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.head_bg {
-  position: absolute;
-  background: #047e79;
-  width: 100%;
-  height: 93px;
-  z-index: -1;
-}
-.menu > div {
-  margin-left: 50px;
-}
-.foto {
-  background-image: url(./img/young-rural-travellers-on-a-picnic.jpg);
-  width: 931px;
-  height: 582px;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.bg {
-  background: rgba(255, 255, 255, 0.36);
-  width: 558px;
-  height: 119px;
-  flex-shrink: 0;
-} */
 a {
   text-decoration: none;
   color: #fff;
@@ -111,13 +70,46 @@ a {
   font-weight: 700;
   line-height: normal;
 }
+.sorting_btn {
+  font-size: 25px;
+  font-weight: 700;
+}
+.sorting{
+  margin: 10px 0;
+}
 .block_pic {
-  background-image: url(../img/female-tourists-on-hand-have-a-happy-travel-map.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 362px;
   height: 409px;
   background-position: center;
+}
+.block1_pic {
+  background-image: url(../img/front-view-of-young-man-going-in-vacation-and-holding-red-bag-on-pink-wall.jpg);
+}
+.block2_pic {
+  background-image: url(../img/female-tourists-on-hand-have-a-happy-travel-map.jpg);
+}
+.block3_pic {
+  background-image: url(../img/medium-shot-woman-holding-baggage.jpg);
+}
+.block4_pic{
+  background-image: url(../img/erik-odiin-jbQvJx2EWnU-unsplash.jpg);
+}
+.block5_pic{
+  background-image: url(../img/top-view-hands-holding-smartphone.jpg);
+}
+.block6_pic{
+  background-image: url(../img/travel-concept-with-open-luggage-and-tickets.jpg);
+}
+.block7_pic{
+  background-image: url(../img/full-shot-couple-traveling-together.jpg);
+}
+.block8_pic{
+  background-image: url(../img/dino-reichmuth-A5rCN8626Ck-unsplash.jpg);
+}
+.block9_pic{
+  background-image: url(../img/side-view-woman-holding-smartphone.jpg);
 }
 .block_name {
   width: 166px;
@@ -129,8 +121,9 @@ a {
   height: 152px;
   flex-shrink: 0;
 }
-.section_items_row{
+.section_items_row {
   display: flex;
+  justify-content: space-around;
 }
 .icon,
 .icons {
