--- a/style/style.css
+++ b/style/style.css
@@ -34,13 +34,21 @@ a {
   height: 93px;
   z-index: -1;
 }
+.logo_head{
+  display: flex;
+  align-items: center;
+}
+.logo_name{
+  color: #fff;
+  font-size: 25px;
+  font-weight: 700;
+}
 .menu > div {
   margin-left: 50px;
 }
 .header {
   color: #000;
   text-align: center;
-
   font-size: 48px;
   font-style: normal;
   font-weight: 700;
@@ -49,7 +57,6 @@ a {
 .header_ps {
   color: #a5a5a5;
   text-align: center;
-
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -60,8 +67,39 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 538px;
+  height: 90%;
+  position: absolute;
+  z-index: -2;
   background-position: center;
+}
+.wrapper, .main {
+  min-height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.picture_bg{
+ color: #fff;
+ margin-bottom: 79px;
+
+}
+.picture_bg > div {
+margin: 0 10px;
+background-color:#a5a5a556;;
+}
+.text_bg{
+  width: 800px;
+  font-weight: 500;
+  font-size: 40px;
+}
+.section{
+  margin-top: 20%;
+}
+.works__nav-link{
+  font-size: 25px;
+  font-weight: 700;
+}
+.sorting > a{
+padding: 15px;
 }
 .text {
   color: #000;
@@ -75,7 +113,7 @@ a {
   font-weight: 700;
 }
 .sorting{
-  margin: 10px 0;
+  margin: 75px 0;
 }
 .block_pic {
   background-repeat: no-repeat;
@@ -174,3 +212,14 @@ a {
   align-items: center;
   justify-content: center;
 }
+/* .works__nav> a{
+  color: #000;
+}
+.portfolio__col {
+  display: inline-block;
+  margin: 10px;
+  width: 100%;
+}
+.hide {
+  display: none;
+} */
