--- a/style/style.css
+++ b/style/style.css
@@ -34,11 +34,11 @@ a {
   height: 93px;
   z-index: -1;
 }
-.logo_head{
+.logo_head {
   display: flex;
   align-items: center;
 }
-.logo_name{
+.logo_name {
   color: #fff;
   font-size: 25px;
   font-weight: 700;
@@ -72,34 +72,34 @@ a {
   z-index: -2;
   background-position: center;
 }
-.wrapper, .main {
+.wrapper,
+.main {
   min-height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
 }
-.picture_bg{
- color: #fff;
- margin-bottom: 79px;
-
+.picture_bg {
+  color: #fff;
+  margin-bottom: 79px;
 }
 .picture_bg > div {
-margin: 0 10px;
-background-color:#a5a5a556;;
+  margin: 0 10px;
+  background-color: #a5a5a556;
 }
-.text_bg{
+.text_bg {
   width: 800px;
   font-weight: 500;
   font-size: 40px;
 }
-.section{
+.section {
   margin-top: 20%;
 }
-.works__nav-link{
+.works__nav-link {
   font-size: 25px;
   font-weight: 700;
 }
-.sorting > a{
-padding: 15px;
+.sorting > a {
+  padding: 15px;
 }
 .text {
   color: #000;
@@ -112,7 +112,7 @@ padding: 15px;
   font-size: 25px;
   font-weight: 700;
 }
-.sorting{
+.sorting {
   margin: 75px 0;
 }
 .block_pic {
@@ -131,22 +131,22 @@ padding: 15px;
 .block3_pic {
   background-image: url(../img/medium-shot-woman-holding-baggage.jpg);
 }
-.block4_pic{
+.block4_pic {
   background-image: url(../img/erik-odiin-jbQvJx2EWnU-unsplash.jpg);
 }
-.block5_pic{
+.block5_pic {
   background-image: url(../img/top-view-hands-holding-smartphone.jpg);
 }
-.block6_pic{
+.block6_pic {
   background-image: url(../img/travel-concept-with-open-luggage-and-tickets.jpg);
 }
-.block7_pic{
+.block7_pic {
   background-image: url(../img/full-shot-couple-traveling-together.jpg);
 }
-.block8_pic{
+.block8_pic {
   background-image: url(../img/dino-reichmuth-A5rCN8626Ck-unsplash.jpg);
 }
-.block9_pic{
+.block9_pic {
   background-image: url(../img/side-view-woman-holding-smartphone.jpg);
 }
 .block_name {
@@ -223,3 +223,242 @@ padding: 15px;
 .hide {
   display: none;
 } */
+/* burger-menu */
+body input + label {
+  position: absolute;
+  top: 33px;
+  left: 24px;
+  height: 59px;
+  width: 40px;
+  z-index: 5;
+}
+body input + label span {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  top: 50%;
+  margin-top: -1px;
+  left: 0;
+  display: block;
+  background: #020304;
+  transition: 0.5s;
+}
+.logo_head {
+  z-index: 6;
+}
+.checkbox {
+  display: none;
+}
+body input + label span:first-child {
+  top: 3px;
+}
+body input + label span:last-child {
+  top: 16px;
+}
+body label:hover {
+  cursor: pointer;
+}
+body input:checked + label span {
+  opacity: 0;
+  top: 50%;
+}
+body input:checked + label span:first-child {
+  opacity: 1;
+  transform: rotate(405deg);
+}
+body input:checked + label span:last-child {
+  opacity: 1;
+  transform: rotate(-405deg);
+}
+body input ~ nav {
+  background: #047e79;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 48px;
+  z-index: 3;
+  transition: 0.5s;
+  transition-delay: 0.5s;
+  overflow: hidden;
+}
+body input ~ nav > ul {
+  text-align: center;
+  position: absolute;
+  top: 15%;
+  left: 20%;
+  right: 20%;
+}
+body input ~ nav > ul > li {
+  opacity: 0;
+  transition: 0.5s;
+  transition-delay: 0s;
+}
+body input ~ nav > ul > li > a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #020304;
+  font-weight: 700;
+  font-family: sans-serif;
+  display: block;
+  padding: 30px;
+}
+body input:checked ~ nav {
+  height: 100%;
+  transition-delay: 0s;
+}
+body input:checked ~ nav > ul > li {
+  opacity: 1;
+  transition-delay: 0.5s;
+}
+/* adaptability */
+@media screen and (max-width: 2560px) and (min-width: 881px) {
+  .btn_hiden {
+    display: none;
+  }
+}
+@media screen and (max-width: 2560px) and (min-width: 648px) {
+  .breadcrumps_hiden {
+    display: none;
+  }
+}
+@media screen and (max-width: 2560px) and (min-width: 533px) {
+  .burger-menu_hiden {
+    display: none;
+  }
+}
+@media (max-width: 1956px) {
+  .section {
+    margin-top: 25%;
+  }
+}
+@media (max-width: 1739px) {
+  .section {
+    margin-top: 30%;
+  }
+}
+@media (max-width: 1440px) {
+  .text_bg {
+    font-size: 30px;
+  }
+}
+@media (max-width: 1356px) {
+  .section_items_row {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 1290px) {
+  .section {
+    margin-top: 35%;
+  }
+}
+@media (max-width: 1162px) {
+  .sorting {
+    margin: 60px 0;
+  }
+  .picture_bg {
+    margin-bottom: 42px;
+  }
+  .section {
+    margin-top: 40%;
+  }
+}
+@media (max-width: 1024px) {
+  .header {
+    font-size: 20px;
+  }
+  .section > div {
+    margin: 20px 0;
+  }
+  .picture {
+    height: 400px;
+  }
+  .section {
+    margin-top: 0;
+  }
+  .footer_block {
+    width: 533px;
+    padding: 35px;
+  }
+  .g {
+    height: 226px;
+  }
+  .icon,
+  .icons {
+    padding: 0px 40px;
+  }
+  .block_pic {
+    height: 200px;
+  }
+}
+@media (max-width: 904px) {
+  .text_bg {
+    width: 100%;
+    font-size: 25px;
+  }
+}
+@media (max-width: 656px) {
+  .main {
+    width: 90%;
+  }
+  .icon,
+  .icons {
+    padding: 0px 29px;
+  }
+  .footer_block {
+    width: 464px;
+    padding: 20px;
+  }
+  .header_ps {
+    font-size: 20px;
+  }
+  .section > div {
+    margin: 13px 0;
+  }
+}
+@media (max-width: 618px) {
+  .text_bg {
+    display: none;
+  }
+  .section {
+    margin-top: 45%;
+  }
+}
+@media (max-width: 532px) {
+  .footer {
+    display: none;
+  }
+  .menu {
+    display: none;
+  }
+  .section {
+    margin-top: 60%;
+  }
+  .sorting > a {
+    padding: 10px;
+  }
+  .works__nav-link {
+    font-size: 20px;
+    font-weight: 400;
+  }
+}
+@media (max-width: 425px) {
+  .section {
+    margin-top: 70%;
+  }
+  .sorting > a {
+    padding: 2px;
+  }
+  .works__nav-link {
+    font-size: 15px;
+    font-weight: 400;
+  }
+}
+@media (max-width: 361px){
+  .main {
+    width: 100%;
+}
+.sorting {
+  margin: 0 0 15px 0;
+}
+}
