--- a/style/stylePhP5.css
+++ b/style/stylePhP5.css
@@ -80,3 +80,116 @@ a {
 .block_pic:hover {
   background-color: #ffffff42;
 }
+/* burger-menu */
+body input + label {
+  position: absolute;
+  top: 14px;
+  left: 14px;
+  height: 20px;
+  width: 21px;
+  z-index: 5;
+}
+body input + label span {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  top: 50%;
+  margin-top: -1px;
+  left: 0;
+  display: block;
+  background: #020304;
+  transition: 0.5s;
+}
+.logo, .profile{
+  z-index: 6;
+}
+.checkbox{
+  display: none;
+}
+body input + label span:first-child {
+  top: 3px;
+}
+body input + label span:last-child {
+  top: 16px;
+}
+body label:hover {
+  cursor: pointer;
+}
+body input:checked + label span {
+  opacity: 0;
+  top: 50%;
+}
+body input:checked + label span:first-child {
+  opacity: 1;
+  transform: rotate(405deg);
+}
+body input:checked + label span:last-child {
+  opacity: 1;
+  transform: rotate(-405deg);
+}
+body input ~ nav {
+  background: rgb(255, 255, 255);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 48px;
+  z-index: 3;
+  transition: 0.5s;
+  transition-delay: 0.5s;
+  overflow: hidden; 
+}
+body input ~ nav > ul {
+  text-align: center;
+  position: absolute;
+  top: 15%;
+  left: 20%;
+  right: 20%;
+}
+body input ~ nav > ul > li {
+  opacity: 0;
+  transition: 0.5s;
+  transition-delay: 0s;
+}
+body input ~ nav > ul > li > a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #020304;
+  font-weight: 700;
+  font-family: sans-serif;
+  display: block;
+  padding: 30px;
+}
+body input:checked ~ nav {
+  height: 100%;
+  transition-delay: 0s;
+}
+body input:checked ~ nav > ul > li {
+  opacity: 1;
+  transition-delay: 0.5s;
+}
+/* adaptability */
+@media screen and (max-width: 2560px) and (min-width: 881px) {
+  .btn_hiden {
+    display: none;
+  }
+}
+@media screen and (max-width: 2560px) and (min-width: 648px) {
+  .breadcrumps_hiden {
+    display: none;
+  }
+}
+@media screen and (max-width: 2560px) and (min-width: 533px) {
+  .burger-menu_hiden {
+    display: none;
+  }
+}
+
+@media (max-width: 532px) {
+  .footer {
+    display: none;
+  }
+  .menu {
+    display: none;
+  }
+}
