--- a/style/style4.css
+++ b/style/style4.css
@@ -102,6 +102,16 @@ a {
   z-index: -2;
   background-position: center;
 }
+.picture_bg{
+  background-image: url(../img/beautiful-aerial-shot-of-florence-italy-architecture-in-the-evening.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 80%;
+  position: absolute;
+  z-index: -2;
+  background-position: center;
+}
 
 .text {
   background-color: #ffffff;
