--- a/style/stylePhP.css
+++ b/style/stylePhP.css
@@ -37,6 +37,50 @@ a {
 .menu > div {
   margin-left: 50px;
 }
+.avatar {
+  width: 235px;
+  height: 235px;
+  border-radius: 273px;
+  background-color: rgba(238, 122, 8, 0.53);
+  margin: 0 auto;
+}
+.name {
+  color: #000;
+  text-align: center;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.name_user {
+  color: #7a7a7a;
+  text-align: center;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.info_user {
+  width: 757px;
+  height: fit-content;
+  flex-shrink: 0;
+  background: #d9d9d9;
+  color: #000;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.line {
+  width: 100%;
+  height: 1px;
+  border-bottom: #000 1px solid;
+}
+
+.section > div {
+  margin: 0 auto;
+}
 /* burger-menu */
 body input + label {
   position: absolute;
@@ -57,10 +101,11 @@ body input + label span {
   background: #020304;
   transition: 0.5s;
 }
-.logo, .profile{
+.logo,
+.profile {
   z-index: 6;
 }
-.checkbox{
+.checkbox {
   display: none;
 }
 body input + label span:first-child {
@@ -94,7 +139,7 @@ body input ~ nav {
   z-index: 3;
   transition: 0.5s;
   transition-delay: 0.5s;
-  overflow: hidden; 
+  overflow: hidden;
 }
 body input ~ nav > ul {
   text-align: center;
